--- a/docs/styles.css
+++ b/docs/styles.css
@@ -63,7 +63,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /*PAGE STYLES*/
 body {
-  background-image: url(https://github.com/LevonHill/MDN-study-stuff/tree/main/docs);
+  background-image: url(docs/upscaled-background-homepage.png);
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
