btn updated again

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -2,7 +2,7 @@
 :root{
     /*MY flex  color palette*/
     --primary-color: #4CAF50;
-    --secondary-color: #41ad45;
+    --secondary-color: #71ce74;
     --tertiarry-color: #2196F3;
     /*Backgrounds focused (for contrast)*/
     --background-color-dark:#121212; 
